# ephemeral

./: .ghc.environment.x86_64-darwin-9.0.1  .gitignore  .travis.yml  cabal.project  checklist.org  ephemeral.cabal  ephemeral.org  hie.yaml  readme.md  readme.org  stack.yaml
app/: ephemeral-poker.hs  ephemeral.hs  mnist.lhs
other/: shekel
src/: Ephemeral.hs
src/Ephemeral/: Chart.hs  Charts.hs  Climb.hs  Ellipse.hs  Funks.hs  Heuristic.hs  Hughes.hs  Learn.hs  Learning.hs  Market.hs  Point.hs  Search.hs  Shekel.hs  Shell.hs
test/: doctests.hs  test.hs
