cabal-version: 3.0
name: ephemeral
version: 0.0.2.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2020
category: machine learning
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/ephemeral#readme
bug-reports: https://github.com/tonyday567/ephemeral/issues
synopsis: See readme.md
description: See readme.md for description.
build-type: Simple
tested-with: GHC == 9.4.8 || == 9.8.1

source-repository head
    type: git
    location: https://github.com/tonyday567/ephemeral

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

library
    import: ghc-options-stanza
    default-language: GHC2021
    hs-source-dirs: src
    build-depends:
        , base        >=4.7 && <5
        , free        >=5.2 && <5.3
        , numhask     >=0.11 && <0.12
        , profunctors >=5.6.2 && <5.7
    exposed-modules:
        Ephemeral.Hughes
        Ephemeral.Search
        Ephemeral.Shekel
