cabal-version: 3.0
name: ephemeral
version: 0.0.2.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2020
category: machine learning
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/ephemeral#readme
bug-reports: https://github.com/tonyday567/ephemeral/issues
synopsis: See readme.md
description: See readme.md for description.
build-type: Simple
tested-with:
    , GHC == 9.10.1
    , GHC == 9.6.5
    , GHC == 9.8.2
extra-doc-files:
    ChangeLog.md
    readme.md

source-repository head
    type: git
    location: https://github.com/tonyday567/ephemeral

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    default-language: GHC2021

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , base        >=4.7 && <5
        , free        >=5.2 && <5.3
        , numhask     >=0.11 && <0.13
        , profunctors >=5.6.2 && <5.7
    exposed-modules:
        Ephemeral.Hughes
        Ephemeral.Search
        Ephemeral.Shekel

test-suite doctests
    import: ghc2021-stanza
    main-is: doctests.hs
    hs-source-dirs: test
    build-depends:
        , QuickCheck       >=2.14 && <2.16
        , base             >=4.14 && <5
        , doctest-parallel >=0.3 && <0.4
    default-extensions: RebindableSyntax
    ghc-options: -threaded
    type: exitcode-stdio-1.0
